[package]
edition           = "2024"
license.workspace = true
name              = "mmr"
version           = "0.1.0"

[dependencies]
digest = { default-features = false, version = "0.10.7" }
rpds   = { default-features = false, version = "1.1.1" }
serde  = { default-features = false, features = ["derive"], optional = true, version = "1" }

[dev-dependencies]
blake2         = { default-features = false, version = "0.10.5" }
proptest       = { default-features = false, features = ["std"], version = "1.0" }
proptest-macro = "0.2"

[lints]
workspace = true

[features]
serde = ["dep:serde", "rpds/serde"]

[package.metadata.cargo-machete]
# False positives.
ignored = ["proptest"]
