[package]
edition = { workspace = true }
license = { workspace = true }
name    = "bundler"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
clap          = { default-features = false, version = "4.5.27", features = ["derive", "std"] }
env_logger    = { default-features = false, version = "0.11.6" }
log           = "0.4.22"
serde_json    = { default-features = false, version = "1.0.135" }
tauri-bundler = { default-features = false, version = "=2.7.1" }
tauri-utils   = "=2.8.0"

[[bin]]
name = "bundle-nomos-node"
path = "nomos-node/bundle.rs"
