[package]
edition           = "2024"
license.workspace = true
name              = "nomos-c"
version           = "0.1.0"

[dependencies]
nomos-node = { default-features = true, workspace = true }
overwatch  = { workspace = true }
serde_yaml = { default-features = false, workspace = true }
tokio      = { default-features = false, workspace = true, features = ["rt-multi-thread"] }

[build-dependencies]
cbindgen = "0.29"

[lib]
crate-type = ["cdylib"]
name       = "libnomos"

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["cbindgen"] # machete does not recognize this for build dep and complains.
