[package]
default-run = "nomos-cli"
description = "Cli app to interact with Nomos nodes and perform various tasks"
edition     = "2021"
license     = { workspace = true }
name        = "nomos-cli"
version     = "0.1.0"

[lints]
workspace = true

[dependencies]
clap                 = { version = "4", features = ["derive"] }
executor-http-client = { workspace = true }
hex                  = "0.4.3"
kzgrs-backend        = { workspace = true }
nomos-core           = { workspace = true }
nomos-tracing        = { workspace = true }
reqwest              = { workspace = true, features = ["json"] }
serde_json           = "1"
tokio                = { version = "1", features = ["sync"] }
tracing              = { workspace = true }
tracing-subscriber   = "0.3"
