[package]
default-run = "nomos-cli"
description = "Cli app to interact with Nomos nodes and perform various tasks"
edition     = "2021"
license     = { workspace = true }
name        = "nomos-cli"
version     = "0.1.0"

[lints]
workspace = true

[dependencies]
clap                 = { default-features = false, features = ["derive", "std"], version = "4" }
executor-http-client = { workspace = true }
hex                  = { default-features = false, version = "0.4.3" }
kzgrs-backend        = { workspace = true }
nomos-core           = { workspace = true }
nomos-tracing        = { workspace = true }
reqwest              = { workspace = true }
serde_json           = { default-features = false, version = "1" }
tokio                = { default-features = false, version = "1" }
tracing              = { workspace = true }
tracing-subscriber   = { default-features = false, version = "0.3" }
