[package]
edition = "2021"
license = { workspace = true }
name    = "nomos-libp2p"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
blake2           = { default-features = false, version = "0.10" }
cryptarchia-sync = { features = ["libp2p"], workspace = true }
futures          = { default-features = false, version = "0.3" }
hex              = { default-features = false, version = "0.4.3" }
libp2p           = { features = ["dns", "gossipsub", "identify", "kad", "macros", "quic", "tokio"], workspace = true }
multiaddr        = { default-features = false, version = "0.18" }
serde            = { default-features = false, version = "1.0.166" }
thiserror        = "1.0.40"
tokio            = "1"
tracing          = { workspace = true }

[dev-dependencies]
serde_json = { default-features = false, version = "1.0.99" }
