[package]
edition = { workspace = true }
license = { workspace = true }
name    = "nomos-libp2p"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
async-trait = { default-features = false, version = "0.1.88" }
backon = { features = ["tokio-sleep"], version = "1.3.0" }
blake2 = { default-features = false, version = "0.10" }
cryptarchia-sync = { features = ["libp2p"], workspace = true }
default-net = { default-features = false, version = "0.14" }
either = { default-features = false, version = "1.13.0" }
futures = { default-features = false, version = "0.3" }
hex = { default-features = false, version = "0.4.3" }
igd-next = { features = ["aio_tokio", "tokio"], version = "0.16.1" }
libp2p = { features = [
  "autonat",
  "dns",
  "gossipsub",
  "identify",
  "kad",
  "macros",
  "quic",
  "secp256k1",
  "tokio",
], workspace = true }
multiaddr = { default-features = false, version = "0.18" }
natpmp = { features = ["tokio"], version = "0.5" }
netdev = { default-features = false, version = "0.31" }
nomos-utils = { features = ["serde", "time"], workspace = true }
num_enum = { default-features = false, version = "0.7.4" }
rand = { default-features = false, version = "0.8" }
serde = { default-features = false, features = ["derive"], version = "1.0.166" }
serde_with = { workspace = true }
thiserror = "1.0.40"
tokio = { features = ["macros", "test-util", "time"], version = "1" }
tracing = { workspace = true }
zerocopy = { features = ["derive"], version = "0.8.26" }

[dev-dependencies]
libp2p-swarm-test  = { features = ["tokio"], version = "0.5.0" }
serde_json         = { default-features = false, version = "1.0.99" }
tracing-subscriber = { features = ["env-filter"], version = "0.3" }
