[package]
edition           = "2024"
license.workspace = true
name              = "nomos-mantle-core"
version           = "0.1.0"

[dependencies]
blake2         = { workspace = true }
bytes          = { workspace = true }
nomos-core     = { workspace = true }
nomos-sdp-core = { workspace = true }
serde          = { version = "1.0", features = ["derive"] }

#[dev-dependencies]
serde_json = "1.0"
