[package]
edition           = "2024"
license.workspace = true
name              = "nomos-mantle-core"
version           = "0.1.0"

[lints]
workspace = true

[dependencies]
blake2         = { workspace = true }
bytes          = { workspace = true }
nomos-core     = { workspace = true }
nomos-sdp-core = { workspace = true }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
