[package]
edition           = "2024"
license.workspace = true
name              = "nomos-sdp-core"
version           = "0.1.0"

[dependencies]
async-trait = "0.1"
blake2      = "0.10"
multiaddr   = "0.18"
nomos-core  = { workspace = true }
thiserror   = "1"
tracing     = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
