[package]
edition           = "2024"
license.workspace = true
name              = "nomos-sdp-core"
version           = "0.1.0"

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
blake2      = "0.10"
const-hex   = "1"
multiaddr   = "0.18"
nomos-core  = { workspace = true }
serde       = { version = "1.0", features = ["derive"] }
thiserror   = "1"
tracing     = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
